--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "echarts": "^4.2.0-rc.2",
     "element-ui": "^2.15.6",
     "js-cookie": "^2.2.0",
+    "lodash": "^4.17.21",
     "normalize.css": "^8.0.0",
     "nprogress": "^0.2.0",
     "v-charts": "^1.19.0",
