add dockerfile nginx.conf

--- a/docker/nginx/config/mall.conf
+++ b/docker/nginx/config/mall.conf
@@ -1,40 +1,53 @@
-# Strapi server
-upstream strapi {
-    server mall.yue3000.com:1337;
-}
-mall.yue3000.com/dashboard
 server {
-    listen  80;
-    server_name     mall.yue3000.com;
+  	# 监听80端口
+    listen 80;
+  	# 将 xxx.com 转发到 /usr/share/nginx/html 目录下
+    server_name dashboard.yue3000.com;
+    index index.php index.html index.htm default.php default.htm default.html;
+    root /usr/share/nginx/html;
+    autoindex on;
 
-     # Redirect HTTP to HTTPS
-    return 301 https://$host$request_uri;
+    # gzip config
+    gzip on;
+    gzip_min_length 1k;
+    gzip_comp_level 9;
+    gzip_types text/plain application/javascript application/x-javascript text/css application/xml text/javascript application/x-httpd-php image/jpeg image/gif image/png;
+    gzip_vary on;
+    gzip_disable "MSIE [1-6]\.";
 }
+server {
+    listen 80;
+  	# 监听直接访问本机80端口的请求 
+    server_name localhost;
 
+    # gzip config
+    gzip on;
+    gzip_min_length 1k;
+    gzip_comp_level 9;
+    gzip_types text/plain application/javascript application/x-javascript text/css application/xml text/javascript application/x-httpd-php image/jpeg image/gif image/png;
+    gzip_vary on;
+    gzip_disable "MSIE [1-6]\.";
 
+  	# 转发到 /usr/share/nginx/html 目录下
+    root /usr/share/nginx/html;
+    location / {
+    		# 自动访问 index.html 文件
+        index  index.html index.htm;
+        try_files $uri $uri/ /index.html;
+    }
 
-server{
-
-    listen 443 ssl;
-    server_name mall.yue3000.com;
-
-     # SSL config
-    ssl_certificate /certificate/6574651_mall.yue3000.com.pem;
-    ssl_certificate_key /certificate/6574651_mall.yue3000.com.key;
+  	# 访问本机IP/dashboard 时 转发到 /usr/share/nginx/html/
+    location /dashboard/ {
+        alias /usr/share/nginx/html/;
+        autoindex on;
+    }
+  	
     
-    #Strapi API
-    location /api/ {
-        rewrite ^/api/?(.*)$ /$1 break;
-        proxy_pass http://strapi;
-        proxy_http_version 1.1;
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Server $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header Host $http_host;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "Upgrade";
-        proxy_pass_request_headers on;
+    error_page  404              /404.html;
+
+    # redirect server error pages to the static page /50x.html
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
+        root   html;
     }
 }
