--- a/docker/nginx/dockerfile
+++ b/docker/nginx/dockerfile
@@ -1,3 +1,17 @@
+FROM node:14.17.4 as build
+
+
+WORKDIR /front
+COPY ./package.json ./
+
+RUN yarn cache clean
+RUN yarn config set registry https://registry.npm.taobao.org/
+RUN yarn install
+COPY . .
+RUN yarn build
+
+
 FROM nginx
 
-COPY  /build  /usr/src/build
+COPY ./docker/nginx/config/mall.conf /etc/nginx/conf.d/default.conf
+COPY --from=build /front/dist/ /usr/share/nginx/html
