--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "echarts": "^4.2.0-rc.2",
+    "echarts": "^4.9.0",
     "element-ui": "^2.15.6",
     "js-cookie": "^2.2.0",
     "lodash": "^4.17.21",
