--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "screenfull": "^5.1.0",
     "vab-icon": "^0.0.1",
     "vue": "^2.6.14",
+    "vue-ele-editable": "^1.0.3",
     "vue-router": "^3.5.2",
     "vuex": "^3.6.2",
     "zx-layouts": "^0.6.27",
