--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "postcss": "^7.0.39",
     "postcss-import": "^14.0.2",
     "prettier": "^2.3.2",
-    "sass": "^1.32.8",
+    "sass": "~1.32.6",
     "sass-loader": "^10.1.1",
     "stylelint": "^13.13.1",
     "stylelint-config-prettier": "^8.0.2",
